# src/resources/chat/dto/message-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class MessageResponseDto {
+  @ApiProperty({ type: 'string' })
+  response: string;
+}
